Remove overflow-x: hidden from root elemen. Consider adding this as a configurable option to the html tag to prevent layout breakage on smalles devices (for instance in cases where implemented content like gists exceed the viewport width and thus add a horizontal scrollbar to the view)

--- a/scss/pg/grid/helpers/_mixins.scss
+++ b/scss/pg/grid/helpers/_mixins.scss
@@ -131,18 +131,13 @@
 //  --------------------------------------------------------------------------
 //	Fixes content width and centers in viewport.
 //  --------------------------------------------------------------------------
-//  @param (boolean) $hide-overflow
 //  @param (string) $root-max-width
 //  @param (boolean) $set-display
 //  ==========================================================================
-@mixin root($hide-overflow: true, $root-max-width: $root-max-width, $set-display: false)
+@mixin root($root-max-width: $root-max-width, $set-display: false)
 {
 	@if $set-display {
 		display: block;
-	}
-
-	@if $hide-overflow {
-		overflow: hidden;
 	}
 
 	@if $root-position==center {
